--- a/examples/index.html
+++ b/examples/index.html
@@ -4,14 +4,14 @@
     <script src="../../bundle.js"></script>
   </head>
   <body>
-    <a-scene>
+    <a-scene wasd-controls>
       <!--
         Camera + Keyboard controls
       -->
       <a-entity camera
                 position="0 1 0"
                 look-controls
-                wasd-controls
+                
                 keyboard-controls
                 sound="src: assets/321103__nsstudios__blip1.wav;
                        on: keydown:e">
