--- a/examples/index.html
+++ b/examples/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-    <script src="../../bundle.js"></script>
+    <script src="../dist/aframe-keyboard-controls.js"></script>
   </head>
   <body>
     <a-scene wasd-controls>
